--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+    {
   "name": "first-app",
   "version": "0.0.0",
   "scripts": {
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server --watch ./server/database.json"
   },
   "private": true,
   "dependencies": {
