--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,8 +39,7 @@
         "*.html"
       ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended",
-        "plugin:prettier/recommended"
+        "plugin:@angular-eslint/template/recommended"
       ],
       "rules": {}
     }
