--- a/.prettierrc
+++ b/.prettierrc
@@ -7,11 +7,29 @@
   "arrowParens": "avoid",
   "trailingComma": "es5",
   "bracketSameLine": true,
-  "printWidth": 80,
+  "printWidth": 140,
   "endOfLine": "auto",
   "overrides": [
     {
-      "files": ["**/*.css", "**/*.scss", "**/*.html"],
+      "files": ["**/*.html"],
+      "options": {
+        "singleQuote": false,
+        "parser": "html"
+      }
+    },
+    {
+      "files": ["**/*.component.html"],
+      "options": {
+        "singleQuote": false,
+        "parser": "angular",
+        "proseWrap": "preserve",
+        "singleAttributePerLine": true,
+        "bracketSameLine": false,
+        "embeddedLanguageFormatting": "off"
+      }
+    },
+    {
+      "files": ["**/*.css", "**/*.scss"],
       "options": {
         "singleQuote": false
       }
